0.9.0/_sources/generated/statsmodels.sandbox.regression.gmm.NonlinearIVGMM.rst.txt
statsmodels.sandbox.regression.gmm.NonlinearIVGMM
=================================================

.. currentmodule:: statsmodels.sandbox.regression.gmm

.. autoclass:: NonlinearIVGMM

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~NonlinearIVGMM.calc_weightmatrix
    
    
      ~NonlinearIVGMM.fit
    
    
      ~NonlinearIVGMM.fitgmm
    
    
      ~NonlinearIVGMM.fitgmm_cu
    
    
      ~NonlinearIVGMM.fititer
    
    
      ~NonlinearIVGMM.fitstart
    
    
      ~NonlinearIVGMM.from_formula
    
    
      ~NonlinearIVGMM.get_error
    
    
      ~NonlinearIVGMM.gmmobjective
    
    
      ~NonlinearIVGMM.gmmobjective_cu
    
    
      ~NonlinearIVGMM.gradient_momcond
    
    
      ~NonlinearIVGMM.jac_error
    
    
      ~NonlinearIVGMM.jac_func
    
    
      ~NonlinearIVGMM.momcond
    
    
      ~NonlinearIVGMM.momcond_mean
    
    
      ~NonlinearIVGMM.predict
    
    
      ~NonlinearIVGMM.score
    
    
      ~NonlinearIVGMM.score_cu
    
    
      ~NonlinearIVGMM.set_param_names
    
    
      ~NonlinearIVGMM.start_weights
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NonlinearIVGMM.endog_names
      ~NonlinearIVGMM.exog_names
      ~NonlinearIVGMM.results_class
   
   